# InteRecAgent

./: .env.example  .gitignore  AGENTS.md  README.md  ecommerce_rec_agent_engineering_analysis.md  pyproject.toml
backend/: __init__.py
backend/app/: __init__.py  fixtures.py  main.py  schemas.py
backend/app/data_pipeline/: __init__.py  catalog_builder.py  catalog_readiness.py  (+8 more)
data/eval/: golden_cases.jsonl  task_cases.jsonl
docs/: agent_architecture_and_tech_selection.md  data_plan.md  development_roadmap.md  evaluation_plan.md  implementation_task_breakdown.md  inte_rec_agent_prd.md  mvp_scope.md  review_meeting_consensus.md  system_architecture.md
docs/prototype/: index.html
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/src/: App.a11y.test.tsx  App.css  App.responsive.test.tsx  App.test.tsx  App.tsx
scripts/: validate_mvp.py
spec/: spec-process-backend-development-tasks.md  spec-process-frontend-development-tasks.md
tests/api/: test_backend_api.py
tests/data_pipeline/: test_data_pipeline.py
tests/evaluation/: test_evaluation_service.py
tests/integration/: test_catalog_artifact_runtime.py
tests/scripts/: test_validate_mvp.py
tests/services/: test_evaluation_service.py  test_intent_parser.py  test_llm_grounding.py  test_llm_intent_parser.py  test_performance_smoke.py  test_product_store.py  test_profile_store.py  test_recommendation_pipeline.py  test_replay_runner.py  test_schema_contracts.py  test_session_state.py  test_task_router.py  test_trace_logger.py  test_vector_index.py
(+28 files in other folders)
