[project]
name = "interecagent"
version = "0.1.0"
description = "Traceable e-commerce recommendation agent MVP"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
]

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
